--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "postinstall": "drizzle-kit push"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.2",
@@ -70,4 +71,6 @@
     "initVersion": "7.38.1"
   },
   "packageManager": "npm@11.1.0"
+  
+
 }
